2000-05-24  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* smtpserver/rfc821scn.c, smtpserver/smtpcmds.c:
	    Eugene Crosser wanted to have:  <foo!_bar@some.dom>,
	    our scanner demanded an alphanum starter character for
	    the sub-fields of the local-part.  Now allowing also
	    the underscore as starter there -- for a username..
	    (smtpcmds.c has some diagnostics report beauty warts.)

2000-05-18  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* proto/newdb.in, router/libdb/ndbm.c, router/libdb/dbm.c:
	    At NewDBM (ndbm) the dbm_dirfno() does not always yield
	    success at the dbm_open().  It *may* yield some scrap data
	    for a while -- especially if the db is *very* small.
	    The  dbm_pagfno()  yields always ok filehandle number,
	    and thus we use it -- and change file moving order to
	    .DIR .PAG to match which is tested latter.

2000-05-10  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* proto/Makefile.in, proto/post-install.sh.in:
	    Moved POSTOFFICE directory subdir generation into
	    the  post-install.sh  script.  Execution of that
	    script before system becomes ready for running is
	    now MANDATORY!  (At least at fresh installations.)

2000-05-09  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* router/rfc822.c:
	    Existence of ZENV variable ``SCHEDULERDIRHASH'' drives
	    movement of files from router to the scheduler to go
	    straight to hashed subdirs at the scheduler.

	* router/daemonsub.c:
	    A lot more work at the daemon subsystem.
	    Now it runs a dedicated set of router processes for
	    the primary router directory, plus one for each of
	    ``ROUTERDIRS'' variable defined auxiliary directories.

	* libc/mail.c, router/daemonsub.c, man/router.8,
	  SiteConfig.in:
	    If ZENV variable ``ROUTERDIRHASH'' exists, and has value
	    ``1'', all message submissions will be using direct moving
	    nto ``A'' thru ``Z'' hash-subdirectories -- if they don't
	    exist, things FAIL!

	* scheduler/mq2auth.c, scheduler/transport.c: